added 2nd webpage and pic

--- a/about-me.html
+++ b/about-me.html
@@ -23,7 +23,7 @@
       </article>
     </section>
     <footer>
-      <p>This page is built by me, in 2022</p>
+      <p>This page is built by me, Thomas,  in 2022</p>
     </footer>
   </body>
 </html>
