--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
       <h2>Links for all my web pages</h2>
         <article>
           <h3>About Me!</h3>
+          <img src="images/lego-waving.jpg" width="222" height="166" alt="graffiti of a lego person on a wall waving">
           <nav>
-            <img src="images/lego-waving.jpg" width="222" height="166" alt="graffiti of a lego person on a wall waving">
-            <br>
             <a href="about-me.html">About me</a>
           </nav>
         </article>
         <article>
           <h3>My First webpage!</h3>
+          <img src="images/thumbs-up.jpg" width="222" height="166" alt="black and white photo of an old race car driver giving two thumbs up">
           <nav>
-            <img src="images/thumbs-up.jpg" width="222" height="166" alt="black and white photo of an old race car driver giving two thumbs up">
-            <br>
             <a href="https://github.com/tsulgrove/semantic-elements">First Webpage</a>
+          </nav>
+        </article>
+        <article>
+          <h3>My Second webpage!</h3>
+          <img src="images/chuck-norris-approval.jpg" width="222" height="166" alt="Chuck Norris giving his approval with a thumbs up">
+          <nav>
+            <a href="https://google.com">Second Webpage</a>
           </nav>
         </article>
     </section>
     <footer>
-      <p>This page is built by me, in 2022</p>
+      <p>This page is built by me, Thomas, in 2022</p>
     </footer>
   </body>
 </html>
