--- a/about-me.html
+++ b/about-me.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>My Portfolio!</title>
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css">
   </head>
   <body>
     <header>
-      <h1>All About Thomas</h1>
+      <h1 class="about-me">All About Thomas</h1>
       <nav>
         <a href="index.html">Home Page</a>
       </nav>
@@ -15,15 +16,15 @@
       <h2>About Me</h2>
       <article>
         <h3>Background</h3>
-        <p>Im a Data Engineer with 5+ years expirence in the field and am now learning front end development!</p>
+        <p class= 'about-me'> Im a Data Engineer with 5+ years expirence in the field and am now learning front end development!</p>
       </article>
       <article >
         <h3>Outside of work</h3>
-        <p>In my free time I enjoy wandering around the city looking at old building, finding new food to eat, and sitting on the beach listening to music.</p>
+        <p class= 'about-me'>In my free time I enjoy wandering around the city looking at old building, finding new food to eat, and sitting on the beach listening to music.</p>
       </article>
     </section>
     <footer>
-      <p>This page is built by me, Thomas,  in 2022</p>
+      <p>This page is built by me, Thomas, in 2022</p>
     </footer>
   </body>
 </html>
