--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>My Portfolio!</title>
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+    <script src="https://kit.fontawesome.com/65b25e0436.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
