--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
             </nav>
           </article>
 
+          <article>
+            <h3>My Contact Form</h3>
+            <aside>
+              <img src="images/telephone.jpg" width="222" height="166" alt="Chuck Norris giving his approval with a thumbs up">
+            </aside>
+            <p class="third-webpage">Enter your contact info and leave some feedback!</p>
+            <nav>
+              <a class="important" href="contact-form.html">Contact Form</a>
+            </nav>
+          </article>
+
         </div>
     </section>
     <footer>
