check box label fix

--- a/contact-form.html
+++ b/contact-form.html
@@ -49,17 +49,17 @@
 
       <fieldset class="checkbox">
         <legend>Whats foods do you like?</legend>
-      <label>Dogs
+      <label>Pizza
         <input class="checkbox" type="checkbox" name="food" value="Pizza">
         <span class="checkmark"></span>
       </label>
 
-      <label>Cats
+      <label>Hot Dogs
         <input class="checkbox" type="checkbox" name="food" value="Hot Dogs">
         <span class="checkmark"></span>
       </label>
 
-      <label>Moose
+      <label>Ice Cream
         <input class="checkbox" type="checkbox" name="food" value="Ice Cream">
         <span class="checkmark"></span>
       </label>
