--- a/contact-form.html
+++ b/contact-form.html
@@ -20,7 +20,7 @@
       </label>
 
       <label> Your phone number:
-        <input type="email" name="applicantEmail">
+        <input type="text" name="applicantPhoneNumber">
       </label>
 
       <label>
