--- a/contact-form.html
+++ b/contact-form.html
@@ -40,7 +40,7 @@
       </fieldset>
 
       <label>Did you like the Chuck Norris Picture?
-        <select name="hours">
+        <select name="ChuckNorrisIsAwesome">
           <option value="yes"> Yes</option>
           <option value="definity"> Definity</option>
           <option value="omg of course"> omg of course</option>
